Fixes #258. Fix z-index issues with footer

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -118,6 +118,10 @@
   // Responsive Tables
   // Temporary fix until <responsive-table> fixes EVERYTHING!!!
   @import "tables";
+
+  footer {
+    z-index: auto;
+  }
 }
 
 
